# gpu-path-tracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/shader/: path_tracer_cs.glsl  present_fs.glsl
